--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] حفظ، [Ctrl+Shift+Enter] حفظ وإعادة الإرسال",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] إرسال، [Shift+Enter] فاصل سطر، [Ctrl+Enter] إرسال بدون توليد",
   "{{count}} conversations could not be recovered due to data read errors": "لم يتم استرداد {{count}} محادثة بسبب أخطاء في قراءة البيانات",
+  "{{count}} file(s) failed to parse": "{{count}} ملف(ملفات) تعذر تحليلها",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "تعذر تحليل {{count}} ملف(ات) محليًا. يمكنك ترقية خطتك لاستخدام خدمة معالجة الملفات المتقدمة من Chatbox AI.",
+  "{{count}} file(s) failed to queue": "{{count}} ملف(ملفات) فشل إدراجها في قائمة الانتظار",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ملفات غير مدعومة: {{files}}. التنسيقات المدعومة: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} ملف(ات) في قائمة الانتظار لتحليل الخادم",
   "{{count}} MCP servers imported": "{{count}} خوادم MCP مستوردة",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "يوجد مزود بهذا المعرف بالفعل. ستؤدي المتابعة إلى الكتابة فوق التكوين الحالي.",
   "About": "حول",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "فشل في فتح نافذة الملف: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "فشل في تحليل الملف. الرجاء المحاولة مرة أخرى أو استخدام تنسيق ملف مختلف.",
   "Failed to read from clipboard": "فشل في القراءة من الحافظة",
+  "Failed to retry {{filename}}: {{error}}": "فشل في إعادة محاولة {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "فشل حفظ الملف: {{error}}",
   "Failed to save login tokens": "فشل في حفظ رموز تسجيل الدخول",
   "Failed to update knowledge base, Error: {{error}}": "فشل تحديث قاعدة المعرفة، خطأ: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "التغذية الراجعة",
   "Fetch": "استرداد",
   "File": "ملف",
+  "File {{filename}} queued for server parsing": "ملف {{filename}} في قائمة انتظار تحليل الخادم",
   "File Chunks": "أجزاء الملف",
   "File Chunks Preview": "معاينة أجزاء الملف",
   "File Content": "محتوى الملف",
@@ -387,6 +393,7 @@
   "Local (stdio)": "محلي (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "فشلت معالجة الملفات المحلية. يمكنك ترقية خطتك لاستخدام قدرات Chatbox AI المتقدمة لمعالجة الملفات.",
   "Local Mode": "وضع محلي",
+  "Local parse failed": "فشل التحليل المحلي",
   "Log in to your Chatbox account": "تسجيل الدخول إلى حسابك في Chatbox",
   "Log out": "تسجيل الخروج",
   "Login": "سجل الدخول",
@@ -468,6 +475,7 @@
   "No models found matching your search": "لم يتم العثور على نماذج مطابقة لبحثك",
   "No permission to write file": "لا يوجد إذن لكتابة الملف",
   "No results found": "لم يتم العثور على نتائج",
+  "No retry available": "لا توجد إعادة محاولة متاحة",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "لم يتم العثور على نتائج بحث. يرجى استخدام <OpenExtensionSettingButton>مزود بحث</OpenExtensionSettingButton> آخر أو المحاولة مرة أخرى لاحقًا.",
   "None": "لا شيء",
   "not available in browser": "هذه الميزة غير متاحة في المتصفح. يرجى تنزيل تطبيق سطح المكتب.",
@@ -567,6 +575,8 @@
   "Retrieve License": "استرداد الترخيص",
   "Retrieves up-to-date documentation and code examples for any library.": "يسترجع وثائق محدّثة وأمثلة برمجية لأي مكتبة.",
   "Retry": "إعادة المحاولة",
+  "Retry All": "إعادة محاولة الكل",
+  "Retry with Server Parsing": "إعادة المحاولة بالتحليل عبر الخادم",
   "Return to the top": "العودة إلى الأعلى",
   "Roadmap": "خارطة الطريق",
   "save": "حفظ",
@@ -594,6 +604,8 @@
   "send": "إرسال",
   "Send": "إرسال",
   "Send Without Generating Response": "إرسال بدون توليد استجابة",
+  "Server parse failed": "فشل تحليل الخادم",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "ستستهلك معالجة الخادم أرصدة حوسبة. يرجى توخي الحذر مع الملفات الكبيرة.",
   "Session Raw JSON": "جلسة JSON الخام",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "تعيين الحد الأقصى لعدد الرموز المميزة لإخراج النموذج. يرجى تعيينه ضمن النطاق المقبول للنموذج، وإلا قد تحدث أخطاء.",
   "Setting the avatar for Copilot": "إعداد صورة مساعد الطيار",
@@ -730,6 +742,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "عند الاستيراد، ستصبح التغييرات نافذة على الفور وسيتم الكتابة فوق البيانات الحالية",
   "Use My Own API Key / Local Model": "استخدام مفتاح API الخاص بي / نموذج محلي",
   "Use proxy to resolve CORS and other network issues": "استخدام البروكسي لحل مشاكل CORS وغيرها من مشاكل الشبكة",
+  "Use server parsing": "استخدام تحليل الخادم",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "يُستخدم لاستخراج متجهات ميزات النص، أضف في الإعدادات - المزود - قائمة النماذج",
   "Used to get more accurate search results": "يُستخدم للحصول على نتائج بحث أكثر دقة",
   "Used to preprocess image files, requires models with vision capabilities enabled": "يُستخدم لمعالجة ملفات الصور مسبقًا، ويتطلب نماذج مزودة بقدرات رؤية مُمكّنة",
