--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Strg+Enter] Speichern, [Strg+Umschalt+Enter] Speichern und erneut senden",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] senden, [Shift+Enter] Zeilenumbruch, [Strg+Enter] senden ohne Generierung",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} Konversationen konnten aufgrund von Datenlesefehlern nicht wiederhergestellt werden",
+  "{{count}} file(s) failed to parse": "{{count}} Datei(en): Parsen fehlgeschlagen",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} Datei(en) konnte(n) lokal nicht verarbeitet werden. Sie können Ihren Plan upgraden, um den erweiterten Dateiverarbeitungsdienst von Chatbox AI zu nutzen.",
+  "{{count}} file(s) failed to queue": "{{count}} Datei(en) konnte(n) nicht in die Warteschlange gestellt werden",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} Datei(en) nicht unterstützt: {{files}}. Unterstützte Formate: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} Datei(en) zur Server-Analyse in die Warteschlange gestellt",
   "{{count}} MCP servers imported": "{{count}} MCP Server importiert",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ein Anbieter mit dieser ID existiert bereits. Wenn Sie fortfahren, wird die bestehende Konfiguration überschrieben.",
   "About": "Über",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "Fehler beim Öffnen des Dateidialogs: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Fehler beim Parsen der Datei. Bitte versuchen Sie es erneut oder verwenden Sie ein anderes Dateiformat.",
   "Failed to read from clipboard": "Fehler beim Lesen aus der Zwischenablage",
+  "Failed to retry {{filename}}: {{error}}": "Wiederholung fehlgeschlagen bei {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "Fehler beim Speichern der Datei: {{error}}",
   "Failed to save login tokens": "Speichern der Login-Tokens fehlgeschlagen",
   "Failed to update knowledge base, Error: {{error}}": "Fehler beim Aktualisieren der Wissensdatenbank, Fehler: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "Feedback",
   "Fetch": "Abrufen",
   "File": "Datei",
+  "File {{filename}} queued for server parsing": "Datei {{filename}} zur Server-Analyse in die Warteschlange gestellt",
   "File Chunks": "Dateiblöcke",
   "File Chunks Preview": "Dateiblöcke-Vorschau",
   "File Content": "Dateiinhalt",
@@ -387,6 +393,7 @@
   "Local (stdio)": "Lokal (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokale Dateiverarbeitung fehlgeschlagen. Sie können Ihr Abonnement aktualisieren, um die erweiterten Dateiverarbeitungsfunktionen von Chatbox AI zu nutzen.",
   "Local Mode": "Lokaler Modus",
+  "Local parse failed": "Lokal parsen fehlgeschlagen",
   "Log in to your Chatbox account": "Melden Sie sich bei Ihrem Chatbox-Konto an",
   "Log out": "Abmelden",
   "Login": "Anmelden",
@@ -468,6 +475,7 @@
   "No models found matching your search": "Keine Modelle gefunden, die Ihrer Suche entsprechen.",
   "No permission to write file": "Keine Schreibberechtigung",
   "No results found": "Keine Ergebnisse gefunden",
+  "No retry available": "Kein erneuter Versuch verfügbar",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "Keine Suchergebnisse gefunden. Bitte verwenden Sie einen anderen <OpenExtensionSettingButton>Suchanbieter</OpenExtensionSettingButton> oder versuchen Sie es später erneut.",
   "None": "Keine",
   "not available in browser": "Diese Funktion ist im Browser nicht verfügbar. Laden Sie die Desktop-Anwendung herunter, um den vollen Funktionsumfang zu erhalten.",
@@ -568,6 +576,8 @@
   "Retrieve License": "Lizenz abrufen",
   "Retrieves up-to-date documentation and code examples for any library.": "Ruft aktuelle Dokumentation und Codebeispiele für jede Bibliothek ab.",
   "Retry": "Zurückversuchen",
+  "Retry All": "Alle erneut versuchen",
+  "Retry with Server Parsing": "Gerne, hier ist die Übersetzung ins Deutsche:\n\nMit Server-Parsing erneut versuchen",
   "Return to the top": "Zum Anfang zurückkehren",
   "Roadmap": "Roadmap",
   "save": "Speichern",
@@ -595,6 +605,8 @@
   "send": "Senden",
   "Send": "Senden",
   "Send Without Generating Response": "Senden, ohne eine Antwort zu generieren",
+  "Server parse failed": "Server-Parsen fehlgeschlagen",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "Das Server-Parsing verbraucht Compute-Gutschriften. Bitte seien Sie bei großen Dateien vorsichtig.",
   "Session Raw JSON": "Roh-JSON der Sitzung",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Legen Sie die maximale Anzahl von Tokens für die Modellausgabe fest. Bitte stellen Sie sicher, dass der Wert innerhalb des akzeptablen Bereichs des Modells liegt, da es sonst zu Fehlern kommen kann.",
   "Setting the avatar for Copilot": "Einstellen des Avatars für den Co-Piloten",
@@ -731,6 +743,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Nach dem Import treten die Änderungen sofort in Kraft und bestehende Daten werden überschrieben",
   "Use My Own API Key / Local Model": "Meine eigene API-Schlüssel / Lokales Modell verwenden",
   "Use proxy to resolve CORS and other network issues": "Proxy verwenden, um CORS- und andere Netzwerkprobleme zu lösen",
+  "Use server parsing": "Server-Parsing verwenden",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Dient zum Extrahieren von Text-Feature-Vektoren, hinzufügen unter Einstellungen – Anbieter – Modellliste",
   "Used to get more accurate search results": "Wird verwendet, um genauere Suchergebnisse zu erhalten",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Wird zur Vorverarbeitung von Bilddateien verwendet, erfordert Modelle mit aktivierten Bildverarbeitungsfunktionen",
