--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -2,7 +2,9 @@
   "(Trial)": "(Trial)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversations could not be recovered due to data read errors",
+  "{{count}} file(s) failed to parse": "{{count}} file(s) failed to parse",
   "{{count}} file(s) failed to parse locally": "{{count}} file(s) failed to parse locally",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.",
   "{{count}} file(s) failed to queue": "{{count}} file(s) failed to queue",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}",
   "{{count}} file(s) queued for server parsing": "{{count}} file(s) queued for server parsing",
@@ -250,12 +252,12 @@
   "Feedback": "Feedback",
   "Fetch": "Fetch",
   "File": "File",
+  "File {{filename}} queued for server parsing": "File {{filename}} queued for server parsing",
   "File Chunks": "File Chunks",
   "File Chunks Preview": "File Chunks Preview",
   "File Content": "File Content",
   "File Processing Error": "File Processing Error",
   "File saved to {{uri}}": "File saved to {{uri}}",
-  "File {{filename}} queued for server parsing": "File {{filename}} queued for server parsing",
   "File Search": "File Search",
   "File Size": "File Size",
   "Focus on the Input Box": "Focus on the Input Box",
@@ -334,6 +336,7 @@
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.",
   "Local Mode": "Local Mode",
+  "Local parse failed": "Local parse failed",
   "Log in to your Chatbox account": "Log in to your Chatbox account",
   "Log out": "Log out",
   "Login": "Login",
@@ -408,6 +411,7 @@
   "No models found matching your search": "No models found matching your search",
   "No permission to write file": "No permission to write file",
   "No results found": "No results found",
+  "No retry available": "No retry available",
   "None": "None",
   "not available in browser": "not available in browser",
   "Not set": "Not set",
@@ -522,6 +526,7 @@
   "Selected Key": "Selected Key",
   "Send": "Send",
   "Send Without Generating Response": "Send Without Generating Response",
+  "Server parse failed": "Server parse failed",
   "Server parsing will consume compute credits. Please be cautious with large files.": "Server parsing will consume compute credits. Please be cautious with large files.",
   "Session Raw JSON": "Session Raw JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.",
@@ -625,6 +630,7 @@
   "Unsupported file type: {{fileName}}": "Unsupported file type: {{fileName}}",
   "Update Available": "Update Available",
   "Upgrade": "Upgrade",
+  "Upgrade to use server parsing": "Upgrade to use server parsing",
   "Upload failed: {{error}}": "Upload failed: {{error}}",
   "Upload Image": "Upload Image",
   "Upload your first document to get started": "Upload your first document to get started",
@@ -632,7 +638,6 @@
   "Use default (first model)": "Use default (first model)",
   "Use My Own API Key / Local Model": "Use My Own API Key / Local Model",
   "Use server parsing": "Use server parsing",
-  "Upgrade to use server parsing": "Upgrade to use server parsing",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Used to extract text feature vectors, add in Settings - Provider - Model List",
   "Used to get more accurate search results": "Used to get more accurate search results",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Used to preprocess image files, requires models with vision capabilities enabled",
