--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Guardar, [Ctrl+Shift+Enter] Guardar y reenviar",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] enviar, [Shift+Enter] salto de línea, [Ctrl+Enter] enviar sin generar",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversaciones no se pudieron recuperar debido a errores de lectura de datos",
+  "{{count}} file(s) failed to parse": "{{count}} archivo(s) no se pudieron analizar",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} archivo(s) no se pudo analizar localmente. Puedes actualizar tu plan para usar el servicio avanzado de procesamiento de archivos de Chatbox AI.",
+  "{{count}} file(s) failed to queue": "{{count}} archivo(s) fallaron al encolar",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} archivo(s) no compatible(s): {{files}}. Formatos compatibles: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} archivo(s) en cola para el análisis del servidor",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Ya existe un proveedor con esta ID. Si continúa, se sobrescribirá la configuración existente.",
   "About": "Acerca de",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "Error al abrir el diálogo de archivo: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Error al analizar el archivo. Vuelve a intentarlo o usa un formato de archivo diferente.",
   "Failed to read from clipboard": "No se pudo leer del portapapeles",
+  "Failed to retry {{filename}}: {{error}}": "No se pudo reintentar {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "No se pudo guardar el archivo: {{error}}",
   "Failed to save login tokens": "No se pudieron guardar los tokens de inicio de sesión",
   "Failed to update knowledge base, Error: {{error}}": "Error al actualizar la base de conocimientos, Error: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "Comentarios",
   "Fetch": "Obtener",
   "File": "Archivo",
+  "File {{filename}} queued for server parsing": "Archivo {{filename}} en cola para procesamiento en el servidor",
   "File Chunks": "Fragmentos de archivo",
   "File Chunks Preview": "Vista previa de fragmentos de archivo",
   "File Content": "Contenido del archivo",
@@ -387,6 +393,7 @@
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Error en el procesamiento de archivos locales. Puedes actualizar tu plan para usar las capacidades avanzadas de procesamiento de archivos de Chatbox AI.",
   "Local Mode": "Modo local",
+  "Local parse failed": "Análisis local fallido",
   "Log in to your Chatbox account": "Iniciar sesión en tu cuenta de Chatbox",
   "Log out": "Cerrar sesión",
   "Login": "Iniciar sesión",
@@ -468,6 +475,7 @@
   "No models found matching your search": "No se encontraron modelos que coincidan con tu búsqueda",
   "No permission to write file": "Sin permiso para escribir archivo",
   "No results found": "No se encontraron resultados",
+  "No retry available": "No reintento disponible",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "No se encontraron resultados de búsqueda. Por favor, use otro <OpenExtensionSettingButton>proveedor de búsqueda</OpenExtensionSettingButton> o inténtelo de nuevo más tarde.",
   "None": "Ninguno",
   "not available in browser": "Esta función no está disponible en el navegador. Por favor, descargue la aplicación de escritorio.",
@@ -567,6 +575,8 @@
   "Retrieve License": "Recuperar licencia",
   "Retrieves up-to-date documentation and code examples for any library.": "Recupera documentación y ejemplos de código al día para cualquier biblioteca.",
   "Retry": "Reintentar",
+  "Retry All": "Reintentar todo",
+  "Retry with Server Parsing": "Reintentar con análisis del servidor",
   "Return to the top": "Volver al principio",
   "Roadmap": "Hoja de ruta",
   "save": "Guardar",
@@ -594,6 +604,8 @@
   "send": "Enviar",
   "Send": "Enviar",
   "Send Without Generating Response": "Enviar sin generar respuesta",
+  "Server parse failed": "Fallo de análisis del servidor",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "El procesamiento del servidor consumirá créditos de computación. Sea precavido con los archivos grandes.",
   "Session Raw JSON": "JSON sin procesar de la sesión",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Establece el número máximo de tokens para la salida del modelo. Por favor, ajústalo dentro del rango aceptable del modelo, de lo contrario pueden ocurrir errores.",
   "Setting the avatar for Copilot": "Configurar el avatar para el copiloto",
@@ -730,6 +742,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Al importar, los cambios se aplicarán inmediatamente y los datos existentes se sobrescribirán",
   "Use My Own API Key / Local Model": "Usar mi propia API Key / Modelo local",
   "Use proxy to resolve CORS and other network issues": "Usar proxy para resolver problemas de CORS y otros problemas de red",
+  "Use server parsing": "Usar análisis en el servidor",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Se utiliza para extraer vectores de características de texto, añadir en Ajustes - Proveedor - Lista de modelos",
   "Used to get more accurate search results": "Se usa para obtener resultados de búsqueda más precisos",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Se utiliza para preprocesar archivos de imagen, requiere modelos con capacidades de visión habilitadas",
