--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Enregistrer, [Ctrl+Shift+Enter] Enregistrer et Renvoyer",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Entrée] envoyer, [Maj+Entrée] saut de ligne, [Ctrl+Entrée] envoyer sans générer",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversations n'ont pas pu être récupérées en raison d'erreurs de lecture de données",
+  "{{count}} file(s) failed to parse": "Échec de l'analyse de {{count}} fichier(s)",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} fichier(s) n'ont pas pu être analysés localement. Vous pouvez mettre à niveau votre forfait pour utiliser le service de traitement de fichiers avancé de Chatbox AI.",
+  "{{count}} file(s) failed to queue": "Impossible de mettre {{count}} fichier(s) en file d'attente",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fichier(s) non pris en charge : {{files}}. Formats pris en charge : {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} fichier(s) en attente d'analyse par le serveur",
   "{{count}} MCP servers imported": "{{count}} serveurs MCP importés",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un fournisseur avec cet ID existe déjà. Continuer écrasera la configuration existante.",
   "About": "À propos",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "Échec de l'ouverture de la boîte de dialogue de fichier : {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Échec de l'analyse du fichier. Veuillez réessayer ou utilisez un format de fichier différent.",
   "Failed to read from clipboard": "Impossible de lire du presse-papiers",
+  "Failed to retry {{filename}}: {{error}}": "Échec de la nouvelle tentative pour {{filename}} : {{error}}",
   "Failed to save file: {{error}}": "Échec de l'enregistrement du fichier : {{error}}",
   "Failed to save login tokens": "Échec de l'enregistrement des jetons de connexion",
   "Failed to update knowledge base, Error: {{error}}": "Échec de la mise à jour de la base de connaissances, Erreur : {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "Commentaires",
   "Fetch": "Récupérer",
   "File": "Fichier",
+  "File {{filename}} queued for server parsing": "Fichier {{filename}} mis en file d'attente pour l'analyse par le serveur",
   "File Chunks": "Morceaux de fichier",
   "File Chunks Preview": "Aperçu des morceaux de fichier",
   "File Content": "Contenu du fichier",
@@ -387,6 +393,7 @@
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Échec du traitement du fichier local. Vous pouvez mettre à niveau votre forfait pour utiliser les capacités avancées de traitement de fichiers de Chatbox AI.",
   "Local Mode": "Mode Local",
+  "Local parse failed": "Analyse locale échouée",
   "Log in to your Chatbox account": "Connectez-vous à votre compte Chatbox",
   "Log out": "Déconnexion",
   "Login": "Connexion",
@@ -468,6 +475,7 @@
   "No models found matching your search": "Aucun modèle correspondant à votre recherche",
   "No permission to write file": "Permission refusée d'écrire le fichier",
   "No results found": "Aucun résultat trouvé",
+  "No retry available": "Pas de réessai disponible",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "Aucun résultat de recherche trouvé. Veuillez utiliser un autre <OpenExtensionSettingButton>fournisseur de recherche</OpenExtensionSettingButton> ou réessayer plus tard.",
   "None": "Aucun",
   "not available in browser": "Cette fonctionnalité n'est pas disponible dans votre navigateur. Veuillez télécharger l'application de bureau pour accéder à toutes les fonctionnalités.",
@@ -568,6 +576,8 @@
   "Retrieve License": "Récupérer une licence",
   "Retrieves up-to-date documentation and code examples for any library.": "Récupère la documentation et les exemples de code à jour pour toute bibliothèque.",
   "Retry": "Pensez étape par étape.\n1. Le texte à traduire est \"Retry\".\n2. Le contexte est une interface utilisateur d'un logiciel d'IA chatbot.\n3. \"Retry\" est un bouton ou une action qui signifie \"essayer à nouveau\".\n4. La traduction la plus courante et appropriée pour \"Retry\" dans une interface utilisateur en français est \"Réessayer\".\n\nLa traduction est \"Réessayer\".Réessayer",
+  "Retry All": "Réessayer tout",
+  "Retry with Server Parsing": "Réessayer avec l'analyse par le serveur",
   "Return to the top": "Retour en haut",
   "Roadmap": "Feuille de route",
   "save": "Enregistrer",
@@ -595,6 +605,8 @@
   "send": "Envoyer",
   "Send": "Envoyer",
   "Send Without Generating Response": "Envoyer sans générer de réponse",
+  "Server parse failed": "Échec de l'analyse du serveur",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "L'analyse par le serveur consommera des crédits de calcul. Veuillez être prudent avec les fichiers volumineux.",
   "Session Raw JSON": "JSON Brut de Session",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Définir le nombre maximal de jetons pour la sortie du modèle. Veuillez le définir dans la plage acceptable du modèle, sinon des erreurs peuvent survenir.",
   "Setting the avatar for Copilot": "Définir l'avatar du copilote",
@@ -731,6 +743,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "A l'importation, les modifications prendront effet immédiatement et les données existantes seront remplacées",
   "Use My Own API Key / Local Model": "Utiliser ma propre clé API / Modèle local",
   "Use proxy to resolve CORS and other network issues": "Utiliser un proxy pour résoudre les problèmes de CORS et d'autres problèmes de réseau",
+  "Use server parsing": "Utiliser l'analyse par le serveur",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Utilisé pour extraire des vecteurs de caractéristiques textuelles, ajouter dans Paramètres - Fournisseur - Liste des modèles",
   "Used to get more accurate search results": "Permet d'obtenir des résultats de recherche plus précis",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Utilisé pour prétraiter les fichiers image, nécessite des modèles avec des capacités de vision activées",
