--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Invio] Salva, [Ctrl+Maiusc+Invio] Salva e reinvia",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] invia, [Shift+Enter] a capo, [Ctrl+Enter] invia senza generare",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversazioni non sono state recuperate a causa di errori di lettura dei dati",
+  "{{count}} file(s) failed to parse": "Impossibile analizzare {{count}} file",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "Elaborazione locale di {{count}} file non riuscita. Puoi aggiornare il tuo piano per utilizzare il servizio avanzato di elaborazione file di Chatbox AI.",
+  "{{count}} file(s) failed to queue": "Impossibile mettere in coda {{count}} file",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) non supportati: {{files}}. Formati supportati: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} file messi in coda per l'elaborazione del server",
   "{{count}} MCP servers imported": "{{count}} server MCP importati",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Un provider con questo ID esiste già. Continuare sovrascriverà la configurazione esistente.",
   "About": "Informazioni",
@@ -284,6 +288,7 @@
   "Failed to open file dialog: {{error}}": "Impossibile aprire la finestra di dialogo del file: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Analisi del file non riuscita. Riprova o usa un formato di file diverso.",
   "Failed to read from clipboard": "Impossibile leggere dagli appunti",
+  "Failed to retry {{filename}}: {{error}}": "Impossibile riprovare {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "Impossibile salvare il file: {{error}}",
   "Failed to save login tokens": "Impossibile salvare i token di accesso",
   "Failed to update knowledge base, Error: {{error}}": "Impossibile aggiornare la base di conoscenza, Errore: {{error}}",
@@ -293,6 +298,7 @@
   "Feedback": "Feedback",
   "Fetch": "Recupera",
   "File": "File",
+  "File {{filename}} queued for server parsing": "File {{filename}} in coda per l'analisi sul server",
   "File Chunks": "Blocchi di file",
   "File Chunks Preview": "Anteprima blocchi file",
   "File Content": "Contenuto del file",
@@ -386,6 +392,7 @@
   "Local (stdio)": "Locale (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Elaborazione del file locale non riuscita. Puoi aggiornare il tuo piano per utilizzare le funzionalità avanzate di elaborazione file di Chatbox AI.",
   "Local Mode": "Modalità locale",
+  "Local parse failed": "Analisi locale fallita",
   "Log in to your Chatbox account": "Accedi al tuo account Chatbox",
   "Log out": "Disconnetti",
   "Login": "Accesso",
@@ -467,6 +474,7 @@
   "No models found matching your search": "Nessun modello trovato corrispondente alla tua ricerca",
   "No permission to write file": "Nessun permesso per scrivere il file",
   "No results found": "Nessun risultato trovato",
+  "No retry available": "Nessun tentativo disponibile",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "Nessun risultato di ricerca trovato. Per favore, usa un altro <OpenExtensionSettingButton>provider di ricerca</OpenExtensionSettingButton> o riprova più tardi.",
   "None": "Nessuno",
   "not available in browser": "Questa funzione non è disponibile nel browser. Si prega di scaricare l'applicazione desktop.",
@@ -566,6 +574,8 @@
   "Retrieve License": "Recupera licenza",
   "Retrieves up-to-date documentation and code examples for any library.": "Recupera documentazione ed esempi di codice aggiornati per qualsiasi libreria.",
   "Retry": "Riprova",
+  "Retry All": "Riprova tutto",
+  "Retry with Server Parsing": "Riprova con analisi del server",
   "Return to the top": "Torna all'inizio",
   "Roadmap": "Roadmap",
   "save": "Salva",
@@ -593,6 +603,8 @@
   "send": "Invia",
   "Send": "Invia",
   "Send Without Generating Response": "Invia senza generare risposta",
+  "Server parse failed": "Analisi del server fallita",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "L'analisi del server consumerà crediti di calcolo. Si prega di prestare attenzione con i file di grandi dimensioni.",
   "Session Raw JSON": "JSON grezzo della sessione",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Imposta il numero massimo di token per l'output del modello. Si prega di impostarlo all'interno dell'intervallo accettabile del modello, altrimenti potrebbero verificarsi errori.",
   "Setting the avatar for Copilot": "Impostazione dell'avatar per il Copilot",
@@ -728,6 +740,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "All'importazione, le modifiche avranno effetto immediato e i dati esistenti saranno sovrascritti",
   "Use My Own API Key / Local Model": "Usa la mia API Key / Modello locale",
   "Use proxy to resolve CORS and other network issues": "Usa proxy per risolvere problemi di CORS e altri problemi di rete",
+  "Use server parsing": "THOUGHT: The user wants to translate \"Use server parsing\" to Italian.\nI will translate \"Use\" as \"Usa\" and \"server parsing\" as \"analisi lato server\" or \"parsing del server\". \"Analisi lato server\" sounds more natural and technical for UI.Usa analisi lato server",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Utilizzato per estrarre vettori di caratteristiche del testo, aggiungi in Impostazioni - Provider - Elenco Modelli",
   "Used to get more accurate search results": "Serve a ottenere risultati di ricerca più accurati",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Utilizzato per pre-elaborare i file immagine, richiede modelli con capacità di visione abilitate",
