--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 保存, [Ctrl+Shift+Enter] 保存して再送信",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 送信、[Shift+Enter] 改行、[Ctrl+Enter] 生成せずに送信",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} 件の会話は、データ読み取りエラーのため復元できませんでした",
+  "{{count}} file(s) failed to parse": "{{count}} 個のファイルの解析に失敗しました",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} 個のファイルはローカルで解析できませんでした。Chatbox AI の高度なファイル処理サービスをご利用いただくには、プランをアップグレードしてください。",
+  "{{count}} file(s) failed to queue": "{{count}} ファイルがキューに追加できませんでした",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}個のファイルはサポートされていません: {{files}}。サポートされている形式: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} 個のファイルがサーバー解析のためキューに登録されました",
   "{{count}} MCP servers imported": "{{count}} MCPサーバーがインポートされました",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "このIDの提供方が既に存在します。続行すると、既存の設定が上書きされます。",
   "About": "情報",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "ファイルダイアログを開けませんでした: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "ファイルの解析に失敗しました。もう一度お試しいただくか、別のファイル形式を使用してください。",
   "Failed to read from clipboard": "クリップボードからの読み取りに失敗しました",
+  "Failed to retry {{filename}}: {{error}}": "{{filename}} のリトライに失敗しました: {{error}}",
   "Failed to save file: {{error}}": "ファイルの保存に失敗しました: {{error}}",
   "Failed to save login tokens": "ログイン トークンの保存に失敗しました",
   "Failed to update knowledge base, Error: {{error}}": "知識ベースの更新に失敗しました、エラー: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "フィードバック",
   "Fetch": "取得",
   "File": "ファイル",
+  "File {{filename}} queued for server parsing": "ファイル {{filename}} はサーバー解析のためキューに追加されました",
   "File Chunks": "ファイルチャンク",
   "File Chunks Preview": "ファイルチャンクプレビュー",
   "File Content": "ファイルコンテンツ",
@@ -387,6 +393,7 @@
   "Local (stdio)": "ローカル (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "ローカルファイル処理に失敗しました。プランをアップグレードすることで、Chatbox AIの高度なファイル処理機能を利用できます。",
   "Local Mode": "ローカルモード",
+  "Local parse failed": "ローカル解析に失敗しました",
   "Log in to your Chatbox account": "Chatboxアカウントにログイン",
   "Log out": "ログアウト",
   "Login": "ログイン",
@@ -468,6 +475,7 @@
   "No models found matching your search": "検索条件に一致するモデルが見つかりません",
   "No permission to write file": "ファイルを書き込む権限がありません",
   "No results found": "結果は見つかりませんでした",
+  "No retry available": "再試行は利用できません",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "検索結果が見つかりませんでした。別の<OpenExtensionSettingButton>検索プロバイダー</OpenExtensionSettingButton>を使用するか、後で再試行してください。",
   "None": "なし",
   "not available in browser": "この機能はブラウザでは使用できません。すべての機能を利用するためには、デスクトップアプリをダウンロードしてください。",
@@ -568,6 +576,8 @@
   "Retrieve License": "ライセンスを取得",
   "Retrieves up-to-date documentation and code examples for any library.": "あらゆるライブラリの最新のドキュメントとコード例を取得します。",
   "Retry": "再試行",
+  "Retry All": "すべてを再試行",
+  "Retry with Server Parsing": "サーバー解析で再試行",
   "Return to the top": "トップに戻る",
   "Roadmap": "ロードマップ",
   "save": "保存",
@@ -595,6 +605,8 @@
   "send": "送信",
   "Send": "送信",
   "Send Without Generating Response": "レスポンスを生成せずに送信",
+  "Server parse failed": "サーバーでの解析に失敗しました",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "サーバー解析にはコンピュートクレジットが消費されます。大容量ファイルにはご注意ください。",
   "Session Raw JSON": "セッション生JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "モデル出力の最大トークン数を設定します。モデルが許容する範囲内で設定してください。そうしないとエラーが発生する可能性があります。",
   "Setting the avatar for Copilot": "コパイロットのアバターを設定",
@@ -731,6 +743,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "インポート後、変更はすぐに反映され、既存のデータは上書きされます",
   "Use My Own API Key / Local Model": "自分のAPIキー/ローカルモデルを使用",
   "Use proxy to resolve CORS and other network issues": "プロキシを使用して CORS とその他のネットワーク問題を解決",
+  "Use server parsing": "サーバー解析を使用",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "テキストの特徴ベクトル抽出に使用。設定 > プロバイダー > モデルリストで追加。",
   "Used to get more accurate search results": "より正確な検索結果を得るために使用されます。",
   "Used to preprocess image files, requires models with vision capabilities enabled": "画像ファイルの前処理に使用されます。視覚機能が有効なモデルが必要です。",
