--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 저장, [Ctrl+Shift+Enter] 저장 및 재전송",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 전송, [Shift+Enter] 줄 바꿈, [Ctrl+Enter] 생성하지 않고 전송",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}}개의 대화를 데이터 읽기 오류로 인해 복구할 수 없습니다",
+  "{{count}} file(s) failed to parse": "{{count}}개 파일 분석에 실패했습니다",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}}개 파일이 로컬에서 구문 분석에 실패했습니다. 요금제를 업그레이드하여 Chatbox AI의 고급 파일 처리 서비스를 사용할 수 있습니다.",
+  "{{count}} file(s) failed to queue": "{{count}}개 파일 큐 추가 실패",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}}개의 파일이 지원되지 않습니다: {{files}}. 지원되는 형식: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}}개 파일이 서버 구문 분석 대기 중입니다.",
   "{{count}} MCP servers imported": "{{count}} MCP 서버 가져옴",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "이 ID를 가진 제공자가 이미 존재합니다. 계속하면 기존 구성이 덮어쓰여집니다.",
   "About": "정보",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "파일 대화 상자를 여는 데 실패했습니다: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "파일 구문 분석에 실패했습니다. 다시 시도하거나 다른 파일 형식을 사용해 주세요.",
   "Failed to read from clipboard": "클립보드에서 읽기 실패",
+  "Failed to retry {{filename}}: {{error}}": "{{filename}}: 재시도 실패: {{error}}",
   "Failed to save file: {{error}}": "파일 저장 실패: {{error}}",
   "Failed to save login tokens": "로그인 토큰 저장 실패",
   "Failed to update knowledge base, Error: {{error}}": "지식 기반 업데이트 실패, 오류: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "피드백",
   "Fetch": "가져오기",
   "File": "파일",
+  "File {{filename}} queued for server parsing": "파일 {{filename}}이(가) 서버 파싱 대기열에 추가되었습니다",
   "File Chunks": "파일 청크",
   "File Chunks Preview": "파일 청크 미리보기",
   "File Content": "파일 내용",
@@ -387,6 +393,7 @@
   "Local (stdio)": "로컬 (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "로컬 파일 처리에 실패했습니다. Chatbox AI의 고급 파일 처리 기능을 사용하려면 요금제를 업그레이드하세요.",
   "Local Mode": "로컬 모드",
+  "Local parse failed": "로컬 구문 분석 실패",
   "Log in to your Chatbox account": "Chatbox 계정에 로그인하세요",
   "Log out": "로그아웃",
   "Login": "로그인",
@@ -468,6 +475,7 @@
   "No models found matching your search": "검색 결과와 일치하는 모델이 없습니다.",
   "No permission to write file": "파일 쓰기 권한 없음",
   "No results found": "결과가 없습니다",
+  "No retry available": "재시도 불가",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "검색 결과가 없습니다. 다른 <OpenExtensionSettingButton>검색 제공자</OpenExtensionSettingButton>를 사용하거나 나중에 다시 시도하세요.",
   "None": "없음",
   "not available in browser": "이 기능은 웹 브라우저에서는 사용할 수 없으며, 모든 기능을 얻으려면 데스크톱 앱을 다운로드하십시오.",
@@ -568,6 +576,8 @@
   "Retrieve License": "라이선스 검색",
   "Retrieves up-to-date documentation and code examples for any library.": "어떤 라이브러리든 최신 문서와 코드 예시를 가져옵니다.",
   "Retry": "재시도",
+  "Retry All": "모두 다시 시도",
+  "Retry with Server Parsing": "서버 파싱으로 다시 시도",
   "Return to the top": "맨 위로 돌아가기",
   "Roadmap": "로드맵",
   "save": "저장",
@@ -595,6 +605,8 @@
   "send": "전송",
   "Send": "전송",
   "Send Without Generating Response": "응답 생성 없이 전송",
+  "Server parse failed": "서버 파싱 실패",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "서버 파싱은 컴퓨팅 크레딧을 소모합니다. 대용량 파일 사용 시 주의해 주십시오.",
   "Session Raw JSON": "세션 원시 JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "모델 출력의 최대 토큰 수를 설정합니다. 모델의 허용 범위 내에서 설정해 주세요. 그렇지 않으면 오류가 발생할 수 있습니다.",
   "Setting the avatar for Copilot": "동반자의 아바타 설정",
@@ -731,6 +743,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "가져오기 후 변경사항이 즉시 적용되며 기존 데이터는 덮어쓰게 됩니다",
   "Use My Own API Key / Local Model": "내 자체 API 키 / 로컬 모델 사용",
   "Use proxy to resolve CORS and other network issues": "프록시를 사용하여 CORS 및 기타 네트워크 문제 해결",
+  "Use server parsing": "서버 파싱 사용",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "텍스트 특징 벡터 추출에 사용됩니다. 설정 - 공급자 - 모델 목록에서 추가하세요.",
   "Used to get more accurate search results": "더 정확한 검색 결과를 얻는 데 사용됩니다.",
   "Used to preprocess image files, requires models with vision capabilities enabled": "이미지 파일을 전처리하는 데 사용되며, 시각 기능이 활성화된 모델이 필요합니다",
