--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Lagre, [Ctrl+Shift+Enter] Lagre og send på nytt",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] send, [Shift+Enter] linjeskift, [Ctrl+Enter] send uten å generere",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} samtaler kunne ikke gjenopprettes på grunn av datalesingsfeil",
+  "{{count}} file(s) failed to parse": "{{count}} fil(er) kunne ikke analyseres",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} fil(er) kunne ikke analyseres lokalt. Du kan oppgradere abonnementet ditt for å bruke Chatbox AI sin avanserte filbehandlingstjeneste.",
+  "{{count}} file(s) failed to queue": "{{count}} fil(er) kunne ikke settes i kø",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) støttes ikke: {{files}}. Støttede formater: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} fil(er) lagt i kø for serveranalyse",
   "{{count}} MCP servers imported": "{{count}} MCP servere importert",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En tilbyder med denne ID-en finnes allerede. Fortsetter du, vil den eksisterende konfigurasjonen overskrives.",
   "About": "Om",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "Mislyktes i å åpne filvelger: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Filen kunne ikke analyseres. Prøv igjen, eller bruk et annet filformat.",
   "Failed to read from clipboard": "Klarte ikke å lese fra utklippstavlen",
+  "Failed to retry {{filename}}: {{error}}": "Kunne ikke prøve på nytt {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "Kunne ikke lagre fil: {{error}}",
   "Failed to save login tokens": "Kunne ikke lagre påloggingstokener",
   "Failed to update knowledge base, Error: {{error}}": "Kunne ikke oppdatere kunnskapsbase, Feil: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "Tilbakemelding",
   "Fetch": "Hent",
   "File": "Fil",
+  "File {{filename}} queued for server parsing": "Filen {{filename}} er lagt i kø for serveranalyse",
   "File Chunks": "Filbiter",
   "File Chunks Preview": "Forhåndsvisning av filbiter",
   "File Content": "Filinnhold",
@@ -387,6 +393,7 @@
   "Local (stdio)": "Lokal (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokal filbehandling mislyktes. Du kan oppgradere abonnementet ditt for å bruke Chatbox AIs avanserte filbehandlingsfunksjoner.",
   "Local Mode": "Lokal modus",
+  "Local parse failed": "Lokal parsing feilet",
   "Log in to your Chatbox account": "Logg inn på Chatbox-kontoen din",
   "Log out": "Logg ut",
   "Login": "Logg inn",
@@ -468,6 +475,7 @@
   "No models found matching your search": "Ingen modeller funnet som samsvarer med søket ditt",
   "No permission to write file": "Ingen tillatelse til å skrive fil",
   "No results found": "Ingen resultater funnet",
+  "No retry available": "Ingen nytt forsøk tilgjengelig",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "Ingen søkeresultater funnet. Vennligst bruk en annen <OpenExtensionSettingButton>søkeleverandør</OpenExtensionSettingButton> eller prøv igjen senere.",
   "None": "Ingen",
   "not available in browser": "Denne funksjonen er ikke tilgjengelig i nettleseren. Vennligst last ned skrivebordsapplikasjonen.",
@@ -567,6 +575,8 @@
   "Retrieve License": "Hent lisens",
   "Retrieves up-to-date documentation and code examples for any library.": "Henter oppdatert dokumentasjon og kodeeksempler for ethvert bibliotek.",
   "Retry": "Prøv på nytt",
+  "Retry All": "Prøv alle på nytt",
+  "Retry with Server Parsing": "Prøv igjen med serverparsing",
   "Return to the top": "Tilbake til toppen",
   "Roadmap": "Veikart",
   "save": "Lagre",
@@ -594,6 +604,8 @@
   "send": "Send",
   "Send": "Send",
   "Send Without Generating Response": "Send uten å generere svar",
+  "Server parse failed": "Serveranalyse mislyktes",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "Serveranalysering vil forbruke beregningskreditter. Vær forsiktig med store filer.",
   "Session Raw JSON": "Økt Rå JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Angi maksimalt antall tokens for modellens utdata. Vennligst angi det innenfor modellens akseptable område, ellers kan feil oppstå.",
   "Setting the avatar for Copilot": "Angi avatar for Copilot",
@@ -730,6 +742,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Ved import vil endringer tre i kraft umiddelbart og eksisterende data vil bli overskrevet",
   "Use My Own API Key / Local Model": "Bruk min egen API-nøkkel / Lokal modell",
   "Use proxy to resolve CORS and other network issues": "Bruk proxy for å løse CORS og andre nettverksproblemer",
+  "Use server parsing": "Bruk serveranalyse",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Brukes til å trekke ut tekstfunksjonsvektorer, legg til i Innstillinger - Leverandør - Modelliste",
   "Used to get more accurate search results": "Brukes til å få mer nøyaktige søkeresultater",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Brukes til å forhåndsbehandle bildefiler, krever modeller med visjonsfunksjoner aktivert",
