--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Guardar, [Ctrl+Shift+Enter] Guardar e Reenviar",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] enviar, [Shift+Enter] quebra de linha, [Ctrl+Enter] enviar sem gerar",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversas não puderam ser recuperadas devido a erros de leitura de dados",
+  "{{count}} file(s) failed to parse": "Falha ao analisar {{count}} ficheiro(s)",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "A análise local de {{count}} ficheiro(s) falhou. Pode atualizar o seu plano para usar o serviço avançado de processamento de ficheiros da Chatbox AI.",
+  "{{count}} file(s) failed to queue": "{{count}} ficheiro(s) falhou(falharam) ao adicionar à fila",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} ficheiro(s) não suportado(s): {{files}}. Formatos suportados: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} ficheiro(s) em fila para análise no servidor",
   "{{count}} MCP servers imported": "{{count}} servidores MCP importados",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Já existe um fornecedor com este ID. Ao continuar, a configuração existente será substituída.",
   "About": "Sobre",
@@ -284,6 +288,7 @@
   "Failed to open file dialog: {{error}}": "Falha ao abrir a caixa de diálogo de ficheiros: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Falha ao analisar o ficheiro. Por favor, tente novamente ou utilize um formato de ficheiro diferente.",
   "Failed to read from clipboard": "Falha ao ler da área de transferência",
+  "Failed to retry {{filename}}: {{error}}": "Falha ao tentar novamente {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "Falha ao guardar ficheiro: {{error}}",
   "Failed to save login tokens": "Não foi possível guardar os tokens de login",
   "Failed to update knowledge base, Error: {{error}}": "Falha ao atualizar base de conhecimento, Erro: {{error}}",
@@ -293,6 +298,7 @@
   "Feedback": "Feedback",
   "Fetch": "Buscar",
   "File": "Ficheiro",
+  "File {{filename}} queued for server parsing": "Ficheiro {{filename}} adicionado à fila para análise do servidor",
   "File Chunks": "Fragmentos de Ficheiro",
   "File Chunks Preview": "Pré-visualização de Fragmentos de Ficheiro",
   "File Content": "Conteúdo do Ficheiro",
@@ -386,6 +392,7 @@
   "Local (stdio)": "Local (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "O processamento de ficheiros local falhou. Pode atualizar o seu plano para usar as capacidades avançadas de processamento de ficheiros do Chatbox AI.",
   "Local Mode": "Modo Local",
+  "Local parse failed": "Análise local falhou",
   "Log in to your Chatbox account": "Iniciar sessão na sua conta Chatbox",
   "Log out": "Terminar sessão",
   "Login": "Iniciar Sessão",
@@ -467,6 +474,7 @@
   "No models found matching your search": "Nenhum modelo encontrado correspondente à sua pesquisa",
   "No permission to write file": "Sem permissão para escrever ficheiro",
   "No results found": "Nenhum resultado encontrado",
+  "No retry available": "Repetição não disponível",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "Nenhum resultado de pesquisa encontrado. Por favor, use outro <OpenExtensionSettingButton>fornecedor de pesquisa</OpenExtensionSettingButton> ou tente novamente mais tarde.",
   "None": "Nenhum",
   "not available in browser": "não disponível no navegador, por favor descarregue a aplicação de desktop",
@@ -567,6 +575,8 @@
   "Retrieve License": "Recuperar Licença",
   "Retrieves up-to-date documentation and code examples for any library.": "Recupera documentação atualizada e exemplos de código para qualquer biblioteca.",
   "Retry": "Tentar Novamente",
+  "Retry All": "Repetir Todos",
+  "Retry with Server Parsing": "Tentar Novamente com Processamento no Servidor",
   "Return to the top": "Voltar ao topo",
   "Roadmap": "Roteiro",
   "save": "Guardar",
@@ -594,6 +604,8 @@
   "send": "Enviar",
   "Send": "Enviar",
   "Send Without Generating Response": "Enviar Sem Gerar Resposta",
+  "Server parse failed": "Falha na análise do servidor",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "A análise no servidor consumirá créditos de computação. Tenha cuidado com ficheiros grandes.",
   "Session Raw JSON": "JSON Bruto da Sessão",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Definir o número máximo de tokens para a saída do modelo. Por favor, defina-o dentro do intervalo aceitável do modelo, caso contrário, poderão ocorrer erros.",
   "Setting the avatar for Copilot": "Configurar o avatar para Copiloto",
@@ -729,6 +741,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Após a importação, as alterações terão efeito imediato e os dados existentes serão sobrescritos",
   "Use My Own API Key / Local Model": "Usar minha própria API Key / Modelo Local",
   "Use proxy to resolve CORS and other network issues": "Usar proxy para resolver problemas de CORS e outros problemas de rede",
+  "Use server parsing": "Utilizar análise no servidor",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Usado para extrair vetores de características de texto, adicionar em Definições - Fornecedor - Lista de Modelos",
   "Used to get more accurate search results": "Usado para obter resultados de pesquisa mais precisos",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Usado para pré-processar ficheiros de imagem, requer modelos com capacidades de visão ativadas",
