--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Сохранить, [Ctrl+Shift+Enter] Сохранить и отправить заново",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] отправить, [Shift+Enter] перенос строки, [Ctrl+Enter] отправить без генерации",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} диалогов не удалось восстановить из-за ошибок чтения данных",
+  "{{count}} file(s) failed to parse": "{{count}} файлов не удалось разобрать",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} файл(ов) не удалось разобрать локально. Вы можете обновить свой план, чтобы воспользоваться службой расширенной обработки файлов Chatbox AI.",
+  "{{count}} file(s) failed to queue": "{{count}} файл(ов) не удалось поставить в очередь",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} файл(ы) не поддерживаются: {{files}}. Поддерживаемые форматы: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} файлов поставлено в очередь для обработки на сервере",
   "{{count}} MCP servers imported": "{{count}} MCP серверов импортировано",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "Поставщик с этим ID уже существует. Продолжение перезапишет существующую конфигурацию.",
   "About": "О нас",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "Не удалось открыть диалоговое окно файла: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Не удалось обработать файл. Повторите попытку или используйте другой формат файла.",
   "Failed to read from clipboard": "Не удалось прочитать из буфера обмена",
+  "Failed to retry {{filename}}: {{error}}": "Не удалось повторить {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "Не удалось сохранить файл: {{error}}",
   "Failed to save login tokens": "Не удалось сохранить токены входа",
   "Failed to update knowledge base, Error: {{error}}": "Не удалось обновить базу знаний, Ошибка: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "Обратная связь",
   "Fetch": "Получить",
   "File": "Файл",
+  "File {{filename}} queued for server parsing": "Файл {{filename}} поставлен в очередь для серверного анализа",
   "File Chunks": "Фрагменты файла",
   "File Chunks Preview": "Предварительный просмотр чанков файла",
   "File Content": "Содержимое файла",
@@ -387,6 +393,7 @@
   "Local (stdio)": "Локальный (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Не удалось обработать локальный файл. Вы можете обновить свой тарифный план, чтобы использовать расширенные возможности обработки файлов Chatbox AI.",
   "Local Mode": "Локальный режим",
+  "Local parse failed": "Локальный разбор не удался",
   "Log in to your Chatbox account": "Войдите в свой аккаунт Chatbox",
   "Log out": "Выйти",
   "Login": "Войти",
@@ -468,6 +475,7 @@
   "No models found matching your search": "Модели не найдены по вашему запросу.",
   "No permission to write file": "Нет разрешения на запись файла",
   "No results found": "Не найдено результатов",
+  "No retry available": "Повторная попытка недоступна",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "Результаты поиска не найдены. Пожалуйста, используйте другой <OpenExtensionSettingButton>поисковый сервис</OpenExtensionSettingButton> или попробуйте позже.",
   "None": "Нет",
   "not available in browser": "Эта функция недоступна в браузере. Скачайте наше рабочее приложение, чтобы получить все возможности.",
@@ -568,6 +576,8 @@
   "Retrieve License": "Восстановить лицензию",
   "Retrieves up-to-date documentation and code examples for any library.": "Получает актуальную документацию и примеры кода для любой библиотеки.",
   "Retry": "Повторить",
+  "Retry All": "Повторить все",
+  "Retry with Server Parsing": "Повторить с серверной обработкой",
   "Return to the top": "Вернуться к началу",
   "Roadmap": "План развития",
   "save": "Сохранить",
@@ -595,6 +605,8 @@
   "send": "Отправить",
   "Send": "Отправить",
   "Send Without Generating Response": "Отправить без генерации ответа",
+  "Server parse failed": "Сбой анализа на сервере",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "Обработка на сервере потребляет вычислительные кредиты. Будьте осторожны с большими файлами.",
   "Session Raw JSON": "Исходный JSON сессии",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Установите максимальное количество токенов для вывода модели. Установите его в пределах допустимого диапазона модели, иначе могут возникнуть ошибки.",
   "Setting the avatar for Copilot": "Установка аватара для Copilot",
@@ -731,6 +743,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "После импорта изменения вступят в силу немедленно, а существующие данные будут перезаписаны",
   "Use My Own API Key / Local Model": "Использовать свой API Key / Локальная модель",
   "Use proxy to resolve CORS and other network issues": "Использовать прокси для решения проблем CORS и других сетевых проблем",
+  "Use server parsing": "Использовать серверный анализ",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Используется для извлечения текстовых векторных признаков, добавить в Настройки - Провайдер - Список моделей",
   "Used to get more accurate search results": "Используется для получения более точных результатов поиска",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Используется для предварительной обработки файлов изображений, требует модели с включенными возможностями зрения",
