--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Spara, [Ctrl+Shift+Enter] Spara och skicka igen",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] skicka, [Shift+Enter] radbrytning, [Ctrl+Enter] skicka utan generering",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} konversationer kunde inte återställas på grund av dataläsningsfel",
+  "{{count}} file(s) failed to parse": "{{count}} filer kunde inte parsas",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} fil(er) kunde inte parsas lokalt. Du kan uppgradera din plan för att använda Chatbox AI:s avancerade filbearbetningstjänst.",
+  "{{count}} file(s) failed to queue": "{{count}} fil(er) misslyckades med att köas",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} fil(er) stöds inte: {{files}}. Format som stöds: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} fil(er) har köats för serverbearbetning",
   "{{count}} MCP servers imported": "{{count}} MCP servrar importerade",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "En leverantör med detta ID finns redan. Om du fortsätter kommer den befintliga konfigurationen att skrivas över.",
   "About": "Om",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "Misslyckades att öppna fildialog: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Det gick inte att parsa filen. Försök igen eller använd ett annat filformat.",
   "Failed to read from clipboard": "Kunde inte läsa från urklipp",
+  "Failed to retry {{filename}}: {{error}}": "Misslyckades att försöka igen {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "Kunde inte spara filen: {{error}}",
   "Failed to save login tokens": "Misslyckades att spara inloggningstokens",
   "Failed to update knowledge base, Error: {{error}}": "Misslyckades med att uppdatera kunskapsbasen, Fel: {{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "Återkoppling",
   "Fetch": "Hämta",
   "File": "Fil",
+  "File {{filename}} queued for server parsing": "Fil {{filename}} har lagts i kö för serveranalys",
   "File Chunks": "Filsegment",
   "File Chunks Preview": "Förhandsgranskning av filsegment",
   "File Content": "Filinnehåll",
@@ -387,6 +393,7 @@
   "Local (stdio)": "Lokal (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "Lokal filbearbetning misslyckades. Du kan uppgradera din plan för att använda Chatbox AI:s avancerade filbearbetningsfunktioner.",
   "Local Mode": "Lokalt läge",
+  "Local parse failed": "Lokal tolkning misslyckades",
   "Log in to your Chatbox account": "Logga in på ditt Chatbox-konto",
   "Log out": "Logga ut",
   "Login": "Logga in",
@@ -468,6 +475,7 @@
   "No models found matching your search": "Inga modeller hittades som matchade din sökning",
   "No permission to write file": "Ingen behörighet att skriva till fil",
   "No results found": "Inga resultat hittades",
+  "No retry available": "Ingen återförsök tillgänglig",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "Inga sökresultat hittades. Vänligen använd en annan <OpenExtensionSettingButton>sökleverantör</OpenExtensionSettingButton> eller försök igen senare.",
   "None": "Inget",
   "not available in browser": "Denna funktion är inte tillgänglig i webbläsaren. Vänligen ladda ner skrivbordsapplikationen.",
@@ -567,6 +575,8 @@
   "Retrieve License": "Hämta licens",
   "Retrieves up-to-date documentation and code examples for any library.": "Hämtar aktuell dokumentation och kodexempel för vilket bibliotek som helst.",
   "Retry": "Tänk steg för steg. Jag är en professionell översättare för UI. Jag ska översätta texten \"Retry\" till svenska.\n\n1. **Analysera ordet:** \"Retry\" betyder att försöka igen.\n2. **Kontext:** I ett UI är det ofta en knapp eller en länk som användaren klickar på för att upprepa en misslyckad åtgärd.\n3. **Svenska motsvarigheter:**\n    * \"Försök igen\" - Mycket vanligt och direkt.\n    * \"Återförsök\" - Mer formellt, men också korrekt.\n    * \"Prova igen\" - Lite mer informellt, men också gångbart.\n4. **UI-standarder:** \"Försök igen\" är den mest etablerade och intuitiva översättningen för \"Retry\" i svenska användargränssnitt. Den är kort, tydlig och lätt att förstå.\n\n**Slutgiltigt val:** \"Försök igen\"\n\nFörsök igen",
+  "Retry All": "Återförsök alla",
+  "Retry with Server Parsing": "Försök igen med servertolkning",
   "Return to the top": "Återgå till toppen",
   "Roadmap": "Utvecklingsplan",
   "save": "Spara",
@@ -594,6 +604,8 @@
   "send": "Skicka",
   "Send": "Skicka",
   "Send Without Generating Response": "Skicka utan att generera svar",
+  "Server parse failed": "Serverns tolkning misslyckades",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "Serverbearbetning kommer att förbruka beräkningskrediter. Var försiktig med stora filer.",
   "Session Raw JSON": "Sessionsrå JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Ställ in det maximala antalet tokens för modellens utdata. Vänligen ställ in det inom modellens acceptabla intervall, annars kan fel uppstå.",
   "Setting the avatar for Copilot": "Ställ in profilbild för Copilot",
@@ -731,6 +743,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Vid import kommer ändringarna att träda i kraft omedelbart och befintlig data kommer att skrivas över",
   "Use My Own API Key / Local Model": "Använd min egen API-nyckel / Lokal modell",
   "Use proxy to resolve CORS and other network issues": "Använd proxy för att lösa CORS och andra nätverksproblem",
+  "Use server parsing": "Använd serverparsning",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Används för att extrahera textfunktionsvektorer, lägg till i Inställningar - Leverantör - Modellista",
   "Used to get more accurate search results": "Används för att få mer exakta sökresultat",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Används för att förbehandla bildfiler, kräver modeller med aktiverade synfunktioner",
