--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 儲存, [Ctrl+Shift+Enter] 儲存後重發",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 傳送、[Shift＋Enter] 換行、[Ctrl＋Enter] 傳送但不產生",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} 個對話因資料讀取錯誤而無法復原",
+  "{{count}} file(s) failed to parse": "{{count}} 個檔案解析失敗",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} 個檔案在本地解析失敗。您可以升級您的方案以使用 Chatbox AI 的進階檔案處理服務。",
+  "{{count}} file(s) failed to queue": "{{count}} 個檔案無法排入佇列",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 檔案不支援：{{files}}。支援的格式：{{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} 個檔案已排入伺服器解析佇列",
   "{{count}} MCP servers imported": "{{count}} MCP 伺服器已匯入",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此 ID 的提供方已存在。繼續將覆蓋現有設定。",
   "About": "關於",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "無法開啟檔案對話框：{{error}}",
   "Failed to parse file. Please try again or use a different file format.": "檔案解析失敗。請再試一次或使用不同的檔案格式。",
   "Failed to read from clipboard": "從剪貼簿讀取失敗",
+  "Failed to retry {{filename}}: {{error}}": "重試 {{filename}} 失敗：{{error}}",
   "Failed to save file: {{error}}": "儲存檔案失敗：{{error}}",
   "Failed to save login tokens": "儲存登入憑證失敗",
   "Failed to update knowledge base, Error: {{error}}": "知識庫更新失敗，錯誤：{{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "建議回饋",
   "Fetch": "獲取",
   "File": "檔案",
+  "File {{filename}} queued for server parsing": "檔案 {{filename}} 已排入伺服器解析佇列",
   "File Chunks": "檔案區塊",
   "File Chunks Preview": "檔案區塊預覽",
   "File Content": "檔案內容",
@@ -387,6 +393,7 @@
   "Local (stdio)": "本機 (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本機檔案處理失敗。您可以升級您的方案以使用 Chatbox AI 的進階檔案處理功能。",
   "Local Mode": "本地模式",
+  "Local parse failed": "本地解析失敗",
   "Log in to your Chatbox account": "登入您的 Chatbox 帳戶",
   "Log out": "登出",
   "Login": "登入",
@@ -468,6 +475,7 @@
   "No models found matching your search": "找不到符合您搜尋的模型",
   "No permission to write file": "沒有權限寫入檔案",
   "No results found": "未找到任何結果",
+  "No retry available": "無法重試",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "未找到搜索結果。請使用其他<OpenExtensionSettingButton>搜索提供商</OpenExtensionSettingButton>或稍後重試。",
   "None": "無",
   "not available in browser": "此功能在瀏覽器中無法使用，請下載桌面應用程式以獲取全部功能。",
@@ -573,6 +581,8 @@
   "Retrieve License": "找回License",
   "Retrieves up-to-date documentation and code examples for any library.": "擷取任何函式庫的最新文件和程式碼範例。",
   "Retry": "重試",
+  "Retry All": "重試全部",
+  "Retry with Server Parsing": "重試伺服器解析",
   "Return to the top": "跳轉到頂部",
   "Roadmap": "未來規劃",
   "save": "儲存",
@@ -600,6 +610,8 @@
   "send": "傳送",
   "Send": "發送",
   "Send Without Generating Response": "發送但不產生回答",
+  "Server parse failed": "伺服器解析失敗",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "伺服器解析將消耗計算點數。處理大型檔案時請謹慎。",
   "Session Raw JSON": "會話原始 JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "設定模型輸出的最大 Token 數量。請將其設定在模型可接受的範圍內，否則可能會發生錯誤。",
   "Setting the avatar for Copilot": "設置 Copilot 搭檔的頭像",
@@ -736,6 +748,7 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "匯入後將直接生效，原有資料將會被覆蓋",
   "Use My Own API Key / Local Model": "使用自己的 API Key 或本地模型",
   "Use proxy to resolve CORS and other network issues": "使用代理解決 CORS 和其他網路問題",
+  "Use server parsing": "使用伺服器解析",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "用於提取文字特徵向量，在「設定」-「供應商」-「模型列表」中新增",
   "Used to get more accurate search results": "用於取得更精確的搜尋結果",
   "Used to preprocess image files, requires models with vision capabilities enabled": "用於預處理圖像文件，需要啟用視覺功能的模型",
