--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -3,7 +3,11 @@
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 保存, [Ctrl+Shift+Enter] 保存并发送",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[回车键] 发送，[Shift+回车键] 换行, [Ctrl+回车键] 发送但不生成",
   "{{count}} conversations could not be recovered due to data read errors": "由于数据读取错误，{{count}} 个对话无法恢复",
+  "{{count}} file(s) failed to parse": "{{count}} 个文件解析失败",
+  "{{count}} file(s) failed to parse locally. You can upgrade your plan to use Chatbox AI's advanced file processing service.": "{{count}} 个文件本地解析失败。您可以升级您的套餐以使用 Chatbox AI 的高级文件处理服务。",
+  "{{count}} file(s) failed to queue": "{{count}} 个文件加入队列失败",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} 个文件不支持：{{files}}。支持的格式：{{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} 个文件已加入服务器解析队列",
   "{{count}} MCP servers imported": "{{count}} 个 MCP 服务器已导入",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "此ID的提供方已存在。继续将覆盖现有配置。",
   "About": "关于",
@@ -285,6 +289,7 @@
   "Failed to open file dialog: {{error}}": "无法打开文件对话框：{{error}}",
   "Failed to parse file. Please try again or use a different file format.": "文件解析失败。请重试或使用其他文件格式。",
   "Failed to read from clipboard": "无法从剪贴板读取",
+  "Failed to retry {{filename}}: {{error}}": "重试 {{filename}} 失败：{{error}}",
   "Failed to save file: {{error}}": "保存文件失败: {{error}}",
   "Failed to save login tokens": "保存登录凭证失败",
   "Failed to update knowledge base, Error: {{error}}": "知识库更新失败，错误：{{error}}",
@@ -294,6 +299,7 @@
   "Feedback": "建议反馈",
   "Fetch": "获取",
   "File": "文件",
+  "File {{filename}} queued for server parsing": "文件 {{filename}} 已排队等待服务器解析",
   "File Chunks": "文件分块",
   "File Chunks Preview": "文件分块预览",
   "File Content": "文件内容",
@@ -387,6 +393,7 @@
   "Local (stdio)": "本地 (stdio)",
   "Local file processing failed. You can upgrade your plan to use Chatbox AI's advanced file processing capabilities.": "本地文件处理失败。您可以升级您的套餐以使用 Chatbox AI 的高级文件处理功能。",
   "Local Mode": "本地模式",
+  "Local parse failed": "本地解析失败",
   "Log in to your Chatbox account": "登录你的 Chatbox 账户",
   "Log out": "退出登录",
   "Login": "登录",
@@ -468,6 +475,7 @@
   "No models found matching your search": "未找到符合您搜索条件的模型",
   "No permission to write file": "没有权限写入文件",
   "No results found": "未找到任何结果",
+  "No retry available": "无重试可用",
   "No search results found. Please use another <OpenExtensionSettingButton>search provider</OpenExtensionSettingButton> or try again later.": "未找到搜索结果。请使用其他<OpenExtensionSettingButton>搜索提供方</OpenExtensionSettingButton>或稍后重试。",
   "None": "无",
   "not available in browser": "此功能在浏览器中无法使用，请下载桌面应用",
@@ -573,6 +581,8 @@
   "Retrieve License": "找回License",
   "Retrieves up-to-date documentation and code examples for any library.": "检索任何库的最新文档和代码示例。",
   "Retry": "重试",
+  "Retry All": "全部重试",
+  "Retry with Server Parsing": "重试服务器解析",
   "Return to the top": "跳转到顶部",
   "Roadmap": "未来规划",
   "save": "保存",
@@ -602,6 +612,8 @@
   "send": "发送",
   "Send": "发送",
   "Send Without Generating Response": "发送但不生成回答",
+  "Server parse failed": "服务器解析失败",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "服务器解析将消耗计算积分。请谨慎处理大型文件。",
   "Session Raw JSON": "会话原始 JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "设置模型输出的最大 token 数量。请将其设置在模型可接受的范围内，否则可能会发生错误。",
   "Setting the avatar for Copilot": "设置我的搭档的头像",
@@ -742,6 +754,7 @@
   "Use default (first model)": "使用默认（第一个模型）",
   "Use My Own API Key / Local Model": "使用自己的 API Key 或本地模型",
   "Use proxy to resolve CORS and other network issues": "使用代理解决 CORS 和其他网络问题",
+  "Use server parsing": "使用Chatbox AI 解析服务",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "用于提取文本特征向量，添加到设置 - 提供商 - 模型列表",
   "Used to get more accurate search results": "用于获取更准确的搜索结果",
   "Used to preprocess image files, requires models with vision capabilities enabled": "用于预处理图像文件，需要启用视觉能力的模型",
